fix: spacing add 4th chart

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,8 @@
 
 .chart {
   width: 45%;
+  height: 500px;
+  margin: auto;
   @media only screen and (max-width: 800px) {
     width: 100%;
   }
